# redmic-dictate

./: ANLEITUNG.md  ARCHITECTURE.md  LASTENHEFT.md  README.md  pyproject.toml  requirements.txt
scripts/: benchmark.ps1  install_autostart.ps1  remove_autostart.ps1  setup.ps1  setup_llm.ps1  start.ps1
tests/: test_audio.py  test_config.py  test_controller.py  test_hotkeys.py  test_llm.py  test_openai_realtime.py  test_openai_usage.py  test_text_safety.py  test_tracking.py
voicely_alt/: __init__.py  __main__.py  app.py  audio.py  benchmark.py  chunking.py  config.py  controller.py  focus.py  hotkeys.py  installer.py  llm.py  notify.py  openai_realtime.py  openai_usage.py  overlay.py  overlay_window.py  paste.py  paths.py  recorder.py  single_instance.py  state.py  text_safety.py  tracking.py  tray.py  whispercpp.py
